Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log: 
----------------------------------------------------------------------
----------------------------------------------------------------------

2.8.5 - 4/11/2013 - Aaron
----------------------------------------------------------------------
- Allow styling of global products by site (blogid in classname)
- Fix sort by price in product list widget http://wp.mu/1r5
- Fix popular products shortcode ordering
- Change Shipping form label when shipping is turned off
- Add CAD to stripe gateway
- Add Israel locale to PayPal gateway
- Fix function name conflict with WP-Client plugin
- Fix mp_product_list shortcode list_view argument

2.8.4 - 3/8/2013 - Aaron, Arnold
----------------------------------------------------------------------
- Added eWay Rapid Payments 3.0 gateway (beta)
- Fixed FedEx no results problem. Shipment in non US countries were treated as International even though the destination was the same country.
- Added "Disable Large Image Display" to Presentatio, which prevents clicking on a product image from displaying a large image. Requested to prevent poaching large gallery images.
- Changed class if Lightbox is disabled so that if another plugin loads lightbox the product images won't use it.

2.8.3 - 3/6/2013 - Aaron, Arnold
----------------------------------------------------------------------
- Fix a fatal error that slipped through when sending emails. Important!

2.8.2 - 3/5/2013 - Aaron, Arnold
----------------------------------------------------------------------
- Add mp_product_sku() template function and shortcode
- Add setting to disable sales tax on digital products if desired
- Add option to set products to draft when out of stock
- Show all gateways to super admins in multisite (avoid confusion)
- Fix rounding errors with tax inclusive pricing (big one!)
- Fix problems with ajax paging with grid on taxonomy archive pages
- Fix css class on product images