@@ -5,6 +5,8 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Fix broken new order emails if % is included in product title
+
 2.8.5 - 4/11/2013 - Aaron
 ----------------------------------------------------------------------
 - Allow styling of global products by site (blogid in classname)
